; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/tests/functional/truncate/extr_truncate_test.c_parse_options.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/tests/functional/truncate/extr_truncate_test.c_parse_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"s:f\00", align 1
@optarg = external dso_local global i8*, align 8
@fsize = common dso_local global i32 0, align 4
@ftruncflag = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"Option -%c requires an operand\0A\00", align 1
@optopt = external dso_local global i32, align 4
@errflag = common dso_local global i64 0, align 8
@optind = external dso_local global i32, align 4
@.str.2 = private unnamed_addr constant [23 x i8] c"No filename specified\0A\00", align 1
@filename = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8**)* @parse_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_options(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  br label %6

6:                                                ; preds = %33, %2
  %7 = load i32, i32* %3, align 4
  %8 = load i8**, i8*** %4, align 8
  %9 = call i32 @getopt(i32 %7, i8** %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32 %9, i32* %5, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %34

11:                                               ; preds = %6
  %12 = load i32, i32* %5, align 4
  switch i32 %12, label %25 [
    i32 115, label %13
    i32 102, label %16
    i32 58, label %19
  ]

13:                                               ; preds = %11
  %14 = load i8*, i8** @optarg, align 8
  %15 = call i32 @atoi(i8* %14)
  store i32 %15, i32* @fsize, align 4
  br label %25

16:                                               ; preds = %11
  %17 = load i32, i32* @ftruncflag, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* @ftruncflag, align 4
  br label %25

19:                                               ; preds = %11
  %20 = load i32, i32* @stderr, align 4
  %21 = load i32, i32* @optopt, align 4
  %22 = call i32 (i32, i8*, ...) @fprintf(i32 %20, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = load i64, i64* @errflag, align 8
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* @errflag, align 8
  br label %25

25:                                               ; preds = %11, %19, %16, %13
  %26 = load i64, i64* @errflag, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %25
  %29 = load i8**, i8*** %4, align 8
  %30 = getelementptr inbounds i8*, i8** %29, i64 0
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 @usage(i8* %31)
  br label %33

33:                                               ; preds = %28, %25
  br label %6

34:                                               ; preds = %6
  %35 = load i32, i32* %3, align 4
  %36 = load i32, i32* @optind, align 4
  %37 = icmp sle i32 %35, %36
  br i1 %37, label %38, label %45

38:                                               ; preds = %34
  %39 = load i32, i32* @stderr, align 4
  %40 = call i32 (i32, i8*, ...) @fprintf(i32 %39, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  %41 = load i8**, i8*** %4, align 8
  %42 = getelementptr inbounds i8*, i8** %41, i64 0
  %43 = load i8*, i8** %42, align 8
  %44 = call i32 @usage(i8* %43)
  br label %45

45:                                               ; preds = %38, %34
  %46 = load i8**, i8*** %4, align 8
  %47 = load i32, i32* @optind, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8*, i8** %46, i64 %48
  %50 = load i8*, i8** %49, align 8
  store i8* %50, i8** @filename, align 8
  ret void
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @usage(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
